--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -2,10 +2,10 @@ DirectorySlash Off
 Options -Indexes
 
 RewriteEngine On
-RewriteRule ^/?$ /index.php [QSA,L]
-RewriteRule ^/?([0-9a-zA-Z_-]{2,})/?$ /index.php?user=$1 [L]
-RewriteRule ^/?([0-9a-zA-Z_-]{2,})/?(profile|list|achi|rati|acti|favs|misc|sug)(,(anime|manga))?/?$ /index.php?user=$1&am=$4&module=$2 [QSA,L]
-
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ /dispatch.php [L]
+RewriteRule ^/?$ /dispatch.php [L]
 
 AddOutputFilterByType DEFLATE text/plain
 AddOutputFilterByType DEFLATE text/html
