--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -9,6 +9,8 @@ ErrorDocument 404 /dispatch.php?e=404
 ErrorDocument 403 /dispatch.php?e=403
 
 RewriteEngine On
+RewriteRule ^/?export/(.*)$ /$1/export [R,L]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ /dispatch.php [L]
